Scrollbar fix

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,8 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background-color: rgb(120, 120, 120);    /* color of the scroll thumb */
   border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 3.6px solid rgb(28, 28, 28);  /* creates padding around scroll thumb */
+  border: 3.2px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
 }
 
 div {
